--- a/src/strings/DataverseResources.ro-RO.resx
+++ b/src/strings/DataverseResources.ro-RO.resx
@@ -220,4 +220,16 @@
     <value>Utilizarea directă a câmpurilor monetare nu are încă suport. Utilizați Decimal(CurrencyField) ca soluție temporară, dar rețineți că valoarea zecimală are un interval mai mic decât moneda.</value>
     
   </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Setul de opțiuni cu numele {0} din tabelele corelate nu este acceptat în prezent în coloanele de formule.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Metadatele setului de opțiuni cu numele {0} nu s-au găsit.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Operațiunea nu poate fi efectuată pe mai multe seturi de opțiuni. Utilizați un singur set de opțiuni ca tip de rezultat.</value>
+    
+  </data>
 </root>
