--- a/src/strings/DataverseResources.sv-SE.resx
+++ b/src/strings/DataverseResources.sv-SE.resx
@@ -220,4 +220,16 @@
     <value>Direkt användning av valutafält stöds inte ännu. Använd Decimal(CurrencyField) som en tillfällig lösning, men observera att decimal har ett mindre intervall än valuta.</value>
     
   </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Alternativuppsättningen med namnet {0} från relaterade tabeller stöds för närvarande inte i formelkolumner.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Metadata för alternativuppsättningen med namnet {0} hittades inte.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Det går inte att utföra åtgärden på flera alternativuppsättningar. Använd en enda alternativuppsättning som resultattyp.</value>
+    
+  </data>
 </root>
