--- a/src/strings/DataverseResources.id-ID.resx
+++ b/src/strings/DataverseResources.id-ID.resx
@@ -220,4 +220,16 @@
     <value>Penggunaan langsung bidang mata uang belum didukung. Gunakan Desimal (Bidang Mata Uang) sebagai solusi, tetapi perlu diketahui bahwa desimal memiliki rentang yang lebih kecil dari mata uang.</value>
     
   </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Rangkaian Pilihan dengan nama {0} dari tabel terkait saat ini tidak didukung di kolom formula.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Metadata untuk Rangkaian Pilihan dengan nama {0} tidak ditemukan.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Operasi tidak dapat dilakukan pada beberapa Rangkaian Pilihan. Gunakan satu Rangkaian Pilihan sebagai jenis hasil.</value>
+    
+  </data>
 </root>
