--- a/src/strings/DataverseResources.ja-JP.resx
+++ b/src/strings/DataverseResources.ja-JP.resx
@@ -220,4 +220,16 @@
     <value>通貨フィールドを直接使用することは、現状ではサポートされていません。代わりに Decimal (CurrencyField) を使用してください。ただし、小数の範囲が通貨よりも小さい点に注意してください。</value>
     
   </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>名前が {0} である関連テーブルのオプション セットを計算式列で使用することは、現在サポートされていません。</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>名前が {0} であるオプション セットのメタデータが見つかりません。</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>この処理を複数のオプション セットに対して実行することはできません。結果タイプとしてオプション セットを 1 つのみ使用してください。</value>
+    
+  </data>
 </root>
