--- a/src/strings/DataverseResources.lt-LT.resx
+++ b/src/strings/DataverseResources.lt-LT.resx
@@ -220,4 +220,16 @@
     <value>Tiesioginis valiutos laukų naudojimas dar nepalaikomas. Kaip apėjimo būdą naudokite Decimal(CurrencyField), tačiau atminkite, kad dešimtainio skaičiaus diapazonas mažesnis už valiutos.</value>
     
   </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Parinkčių rinkinys, kurio pavadinimas {0}, iš susijusių lentelių šiuo metu formulės stulpeliuose nepalaikomas.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Parinkčių rinkinio, kurio pavadinimas {0}, metaduomenys nebuvo rasti.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Operacijos negalima atlikti keliuose parinkčių rinkiniuose. Kaip rezultatų tipą naudokite vieną parinkčių rinkinį.</value>
+    
+  </data>
 </root>
