--- a/src/strings/DataverseResources.pl-PL.resx
+++ b/src/strings/DataverseResources.pl-PL.resx
@@ -220,4 +220,16 @@
     <value>Bezpośrednie używanie pól walutowych nie jest jeszcze obsługiwane. Ten problem można obejść, używając typu „Liczba dziesiętna (pole walutowe)”, ale należy pamiętać, że typ Liczba dziesiętna ma mniejszy zakres niż typ Waluta.</value>
     
   </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Zestaw opcji o nazwie {0} z powiązanych tabel nie jest aktualnie obsługiwany w kolumnach formuł.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Nie znaleziono metadanych zestawu opcji o nazwie {0}.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Nie można wykonać operacji w odniesieniu do wielu zestawów opcji. Użyj jednego zestawu opcji jako typu wyniku.</value>
+    
+  </data>
 </root>
