--- a/src/strings/DataverseResources.sr-Latn-RS.resx
+++ b/src/strings/DataverseResources.sr-Latn-RS.resx
@@ -220,4 +220,16 @@
     <value>Direktna upotreba polja valute još uvek nije podržana. Koristite format Decimal(CurrencyField) kao zaobilazno rešenje, ali imajte u vidu da decimalni broj ima manji opseg od valute.</value>
     
   </data>
+  <data name="FormulaColumns_RelatedEntityOptionSetNotSupported" xml:space="preserve">
+    <value>Skup opcija sa nazivom {0} iz povezanih tabela trenutno nije podržan u kolonama sa formulama.</value>
+    
+  </data>
+  <data name="FormulaColumns_InvalidOptionSet" xml:space="preserve">
+    <value>Metapodaci za skup opcija sa nazivom {0} nisu pronađeni.</value>
+    
+  </data>
+  <data name="FormulaColumns_ResultFromMultipleOptionSetsNotSupported" xml:space="preserve">
+    <value>Operaciju nije moguće izvršiti na više skupova opcija. Koristite jedan skup opcija kao tip rezultata.</value>
+    
+  </data>
 </root>
